force-app/main/default/objects/Contact/fields/Adult__c.field-meta.xml
<CustomField>
    <fullName>Adult__c</fullName>
    <formula>IF(ISNULL( Contact_Age__c ), 
IMAGE(&quot;/s.gif&quot;, &quot;No Age Defined&quot;), 
IF(Contact_Age__c &gt; 18, 
IMAGE(&quot;/servlet/servlet.ImageServer?id=015d00000005ykL&amp;oid=00D5B000000DfMz&amp;lastMod=1371829547000&quot;, &quot;Contact is an Adult&quot;), 
IF( Contact_Age__c &lt; 18, 
IMAGE(&quot;/servlet/servlet.ImageServer?id=015d00000005ykN&amp;oid=00D5B000000DfMz&amp;lastMod=1371829547000&quot;, &quot;Contact is a Minor&quot;), 
IMAGE(&quot;/s.gif&quot;, &quot;Status Flag&quot;) 
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adult</label>
    <type>Text</type>
</CustomField>