force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Caregiver/Guardian</fullName>
            </value>
            <value>
                <fullName>Chapter representative</fullName>
            </value>
            <value>
                <fullName>Individual Learner</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>Learning</fullName>
            </value>
            <value>
                <fullName>Members</fullName>
            </value>
            <value>
                <fullName>NAT Student (Confirmed)</fullName>
            </value>
            <value>
                <fullName>NAT Student (Prospect)</fullName>
            </value>
            <value>
                <fullName>PHSS Field personnel</fullName>
            </value>
            <value>
                <fullName>RCS Billing</fullName>
            </value>
            <value>
                <fullName>RCS Shipping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>