force-app/main/default/objects/Contact/fields/Record_Type_for_Filter__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_for_Filter__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Record Type for Filter</label>
    <type>Text</type>
</CustomField>