force-app/main/default/objects/Contact/recordTypes/CRE_Contact.recordType-meta.xml
<RecordType>
    <fullName>CRE_Contact</fullName>
    <active>true</active>
    <description>Used to for testing CRE Created Contacts</description>
    <label>CRE Contact</label>
</RecordType>