force-app/main/default/objects/Contact/recordTypes/Organization.recordType-meta.xml
<RecordType>
    <fullName>Organization</fullName>
    <active>true</active>
    <label>Organization</label>
</RecordType>