force-app/main/default/objects/Contact/validationRules/Birth_Date_cannot_be_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Birth_Date_cannot_be_future_date</fullName>
    <active>true</active>
    <description>Birth Date cannot be future date</description>
    <errorConditionFormula>AND(Birthdate &gt;  DATEVALUE( LastModifiedDate),  $Setup.Validation_Rules__c.Bypass_Rules__c = false)</errorConditionFormula>
    <errorDisplayField>Birthdate</errorDisplayField>
    <errorMessage>Birth Date cannot be greater than current date</errorMessage>
</ValidationRule>