force-app/main/default/objects/Contact/validationRules/Validation_Rule_on_RCS_Billing_contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_on_RCS_Billing_contact</fullName>
    <active>true</active>
    <description>Restricting in creating RCS Billing Contact for particular User.</description>
    <errorConditionFormula>AND( $User.Id != &quot;005d0000001WLvx&quot;, /*Jane McInerney*/ 
$User.Id != &quot;0050V000006jKNy&quot;, /*Nyle Grimes*/ 
$User.Id != &quot;005d0000001Wyup&quot;, /*Kara Desmarais*/ 
$User.Id != &quot;005d0000001Vmik&quot;, /*Wendy Firdman*/ 
$User.Id != &quot;005d0000000Tvsu&quot;, /*LaJuanya Jones*/ 
$User.Id != &quot;005d0000001VstM&quot;, /*Rose Albert*/ 
$Profile.Name != &quot;System Administrator&quot;, /*System Admin*/ 
OR( 
AND(ISNEW(), OR(INCLUDES(Contact_Type__c, &quot;RCS Billing&quot;), INCLUDES(Contact_Type__c, &quot;RCS Shipping&quot;))), /*Restriction in RCS Billing creating*/ 
AND(!ISNEW(), OR(INCLUDES(Contact_Type__c, &quot;RCS Billing&quot;), INCLUDES(Contact_Type__c, &quot;RCS Shipping&quot;))), /*Resctricting RCS Billing contact Edit*/ 
AND(!ISNEW(), OR(PRIORVALUE(Contact_Type__c) = &quot;RCS Billing&quot;, PRIORVALUE(Contact_Type__c) = &quot;RCS Shipping&quot;)))/*Change in RCS Billing to other Contact*/ 
)</errorConditionFormula>
    <errorMessage>You do not have permission to create/edit RCS Billing Contact.</errorMessage>
</ValidationRule>